--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
-
-
-
-
-
-
-
-
-
-  
-  
-    
-  
-
-
-
-
-  
-
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="expires" content="Sun, 30 Nov 2014" /> 
   <meta content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
-  <meta content="Popular modern and powerful data visualization library." name="description">
-  <meta content="html,svg,vml,javascript,charts,data visualization,animation" name="keywords">
+  <meta content="The Komito Collector is a tool to unlock the power of digital analytics." name="description">
   <meta content="(none)" name="author">
   <title>Komito Collector | Homepage</title>
   <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
   <link href="http://www.dtm.io/shared/assets/compiled-shared.css" type="text/css" rel="stylesheet">
   <link href="http://www.dtm.io/komito/assets/compiled.css" type="text/css" rel="stylesheet">
-  
 
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header{min-width: 1140px;}.dtm-header,.dtm-intro,.dtm-intro p span,.dtm-button,.dtm-footer,.dtm-page-scroller:hover{background-color: black;}
-.dtm-logo a{background: url('http://www.dtm.io/images/dtm-logo.png') no-repeat;}.dtm-page-company .dtm-intro p span,.dtm-section-form{background-color: white;}.dtm-section-quality{background-image: none;}.dtm-select:after,.dtm-select:before,.dtm-img-gallery:before,.dtm-img-gallery:after{display:none}input[type="text"],input[type="email"],.dtm-select select{line-height: 40px !important; padding-top: 4px;}.dtm-select select{height: auto; margin: 5px 0;padding-top: 4px;}.dtm-softdev input + label{display: none;}.dtm-dev-list > div{overflow: hidden;}.dtm-dev-list > div,.dtm-softdev .dtm-cell-body {height: auto;}.dtm-dev-list .dtm-sdev-img{margin-right: 0;text-align: center;} .dtm-page-home .dtm-content label {display:none !important;} .dtm-page-home .dtm-content { height: auto !important; overflow: visible !important;}.dtm-page-home .dtm-section.dtm-intro {background-image:none;padding-top: 110px !important; padding-bottom: 4%;}.dtm-softwaredev .cell-span4.cell-offset2 .dtm-cell-body{padding-top: 0;}.dtm-section.dtm-home-contacts{background-color: black;}</style><![endif]--><!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}input[type="text"],input[type="email"],textarea{padding:6px 0;text-indent: 6px;}.dtm-select{height: auto; background: none; border: none;}.dtm-faces{background: url("http://www.dtm.io/images/dtm-faces.jpg") no-repeat 200% top white;}.dtm-faces .dtm-grid-cell,.dtm-intro-wrap div{background: none;display:block;float:left;}.dtm-section-content{width: auto;}.dtm-section-quality{position:static;}.dtm-contacts-list{bottom:auto;}.dtm-section.dtm-home-contacts p > a img,.dtm-section.dtm-home-contacts p > a span {float:left;}.dtm-section.dtm-section-quality ul {display: inline; zoom: 1;}.dtm-section.dtm-section-quality div {width:100%;}</style><![endif]-->  
+.dtm-logo a{background: url('http://www.dtm.io/images/dtm-logo.png') no-repeat;}.dtm-page-company .dtm-intro p span,.dtm-section-form{background-color: white;}.dtm-section-quality{background-image: none;}.dtm-select:after,.dtm-select:before,.dtm-img-gallery:before,.dtm-img-gallery:after{display:none}input[type="text"],input[type="email"],.dtm-select select{line-height: 40px !important; padding-top: 4px;}.dtm-select select{height: auto; margin: 5px 0;padding-top: 4px;}.dtm-softdev input + label{display: none;}.dtm-dev-list > div{overflow: hidden;}.dtm-dev-list > div,.dtm-softdev .dtm-cell-body {height: auto;}.dtm-dev-list .dtm-sdev-img{margin-right: 0;text-align: center;} .dtm-page-home .dtm-content label {display:none !important;} .dtm-page-home .dtm-content { height: auto !important; overflow: visible !important;}.dtm-page-home .dtm-section.dtm-intro {background-image:none;padding-top: 110px !important; padding-bottom: 4%;}.dtm-softwaredev .cell-span4.cell-offset2 .dtm-cell-body{padding-top: 0;}.dtm-section.dtm-home-contacts{background-color: black;}
+</style><![endif]-->
+<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}input[type="text"],input[type="email"],textarea{padding:6px 0;text-indent: 6px;}.dtm-select{height: auto; background: none; border: none;}
+.dtm-faces{background: url("http://www.dtm.io/images/dtm-faces.jpg") no-repeat 200% top white;}.dtm-faces .dtm-grid-cell,.dtm-intro-wrap div{background: none;display:block;float:left;}.dtm-section-content{width: auto;}.dtm-section-quality{position:static;}.dtm-contacts-list{bottom:auto;}.dtm-section.dtm-home-contacts p > a img,.dtm-section.dtm-home-contacts p > a span {float:left;}.dtm-section.dtm-section-quality ul {display: inline; zoom: 1;}.dtm-section.dtm-section-quality div {width:100%;}
+</style><![endif]-->  
 </head>
 <body class="dtm-page-komito dtm-product">
   <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
@@ -43,7 +25,7 @@
       <div class="dtm-grid-cell cell-span2 cell-offset2">
         <div class="dtm-cell-body dtm-logo">
         
-          <a href="/komito/"
+          <a href="./"
              class="dtm-ext-logo"
              title="Komito Collector"><svg version="1.1" id="dtmLogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 83 75" enable-background="new 0 0 0 0" xml:space="preserve"><path fill-rule="evenodd" class="ls s-12Hour" clip-rule="evenodd" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill-rule="evenodd" class="ls s-Trianle" clip-rule="evenodd" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill-rule="evenodd" class="ls s-5Hour" clip-rule="evenodd" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill-rule="evenodd" class="ls s-8Hour" clip-rule="evenodd" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333
                   c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><b>Datamart</b><i>Komito Collector</i></span></a>
@@ -164,7 +146,7 @@
             </div>
           </div>
           <div class="dtm-grid-cell cell-span4">
-            <div class="dtm-cell-body dtm-copyright"><div>&copy;&nbsp;2015&nbsp;Datamart&nbsp;LLC.</div><a href="http://www.linkedin.com/company/datamart-llc" target="_blank" title="Follow Us in LinkedIn"><img src="/images/dtm-linkedin.png" alt="Follow Us in LinkedIn" width="24" height="24"></a></div>
+            <div class="dtm-cell-body dtm-copyright"><div>&copy;&nbsp;2015&nbsp;Datamart&nbsp;LLC.</div><a href="http://www.linkedin.com/company/datamart-llc" target="_blank" title="Follow Us in LinkedIn"><img src="http://www.dtm.io/images/dtm-linkedin.png" alt="Follow Us in LinkedIn" width="24" height="24"></a></div>
           </div>
         </div>
       </div>
