--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
 
   
   <li class="dtm-nav-main-current">
-    <a href='/komito/'
+    <a href='./'
        title='Komito Collector Overview'>Overview</a></li>
-  
   <li>
-    <a href='/komito/integration/'
+    <a href='./integration/'
        title='Komito Collector Integration'>Integration</a></li>
   <li>
-    <a href='/komito/download/'
+    <a href='./download/'
        title='Download Komito Collector'>Download</a></li>  
-       
-
 
 </ul></nav></div>
     </div>
@@ -77,7 +74,7 @@
             <li>Form submissions</li>
             <li>Social widgets</li>
           </ul>
-          <a href="integration/#features" class="kc-features" title="See Komito Collector features"><i>See all features</i>&nbsp;&rarr;</a>
+          <a href="./integration/#features" class="kc-features" title="See Komito Collector features"><i>See all features</i>&nbsp;&rarr;</a>
         </div>
       </div>
       <div class="dtm-grid-cell cell-span3">
@@ -117,14 +114,14 @@
 
   
   <li class="dtm-nav-main-current">
-    <a href='/komito/'
+    <a href='./'
        title='Komito Collector Overview'>Overview</a></li>
   
   <li>
-    <a href='/komito/integration/'
+    <a href='./integration/'
        title='Komito Collector Integration'>Integration</a></li>
   <li>
-    <a href='/komito/download/'
+    <a href='./download/'
        title='Download Komito Collector'>Download</a></li>  
        
 
