Updated home page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta http-equiv="expires" content="Sun, 30 Nov 2014" /> 
   <meta content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
   <meta content="The Komito Collector is a tool to unlock the power of digital analytics." name="description">
-  <meta content="(none)" name="author">
   <title>Komito Collector | Homepage</title>
   <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
-  <link href="http://www.dtm.io/shared/assets/compiled-shared.css" type="text/css" rel="stylesheet">
-  <link href="http://www.dtm.io/komito/assets/compiled.css" type="text/css" rel="stylesheet">
+  <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
+  <link href="http://www.dtm.io/komito/assets/compiled.css" rel="stylesheet">
 
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header{min-width: 1140px;}.dtm-header,.dtm-intro,.dtm-intro p span,.dtm-button,.dtm-footer,.dtm-page-scroller:hover{background-color: black;}
 .dtm-logo a{background: url('http://www.dtm.io/images/dtm-logo.png') no-repeat;}.dtm-page-company .dtm-intro p span,.dtm-section-form{background-color: white;}.dtm-section-quality{background-image: none;}.dtm-select:after,.dtm-select:before,.dtm-img-gallery:before,.dtm-img-gallery:after{display:none}input[type="text"],input[type="email"],.dtm-select select{line-height: 40px !important; padding-top: 4px;}.dtm-select select{height: auto; margin: 5px 0;padding-top: 4px;}.dtm-softdev input + label{display: none;}.dtm-dev-list > div{overflow: hidden;}.dtm-dev-list > div,.dtm-softdev .dtm-cell-body {height: auto;}.dtm-dev-list .dtm-sdev-img{margin-right: 0;text-align: center;} .dtm-page-home .dtm-content label {display:none !important;} .dtm-page-home .dtm-content { height: auto !important; overflow: visible !important;}.dtm-page-home .dtm-section.dtm-intro {background-image:none;padding-top: 110px !important; padding-bottom: 4%;}.dtm-softwaredev .cell-span4.cell-offset2 .dtm-cell-body{padding-top: 0;}.dtm-section.dtm-home-contacts{background-color: black;}
@@ -122,7 +120,7 @@
             </div>
           </div>
           <div class="dtm-grid-cell cell-span4">
-            <div class="dtm-cell-body dtm-copyright"><div>&copy;&nbsp;2015&nbsp;Datamart Inc.</div><a
+            <div class="dtm-cell-body dtm-copyright"><div>© 2015 Datamart Inc.</div><a
                  href="//www.linkedin.com/company/datamartinc" target="_blank"
                  title="Follow Us in LinkedIn"><img
                  src="http://www.dtm.io/images/dtm-linkedin.png"
