--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-  <title itemprop="name">Komito Collector - Homepage</title>
-  <meta name="og:title" content="Komito Collector - Homepage">
+  <title itemprop="name">Komito Collector</title>
+  <meta name="og:title" content="Komito Collector">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <meta name="description" content="The Komito Collector is a tool to unlock the power of digital analytics.">
-  <meta name="og:description" content="The Komito Collector is a tool to unlock the power of digital analytics.">
+  <meta name="description" content="The Komito collector is a tool to unlock the power of digital analytics.">
+  <meta name="og:description" content="The Komito collector is a tool to unlock the power of digital analytics.">
   <meta name="og:image" content="http://dtm.io/images/dtm-products-komito.png">
   <meta itemprop="image" content="http://dtm.io/images/dtm-products-komito.png">
   <meta name="twitter:card" content="summary">
