Updated home page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="dtm-grid-row dtm-footer">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
       <div class="dtm-cell-body">
-        <p>
+        <p style="padding-top:1em">
           Komito Collector is subject to the terms and conditions
           of <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
         </p>
