--- a/index.html
+++ b/index.html
@@ -134,4 +134,12 @@
     </div>
   </div>
 </div><!--/dtm-grid-->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create','UA-5065160-14','auto');
+ga('send','pageview');
+</script>
 </body></html>
