--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="dtm-cell-body">
           <h2>Compatibility</h2>
           <ul>
-            <li><a target="_blank" rel="nofollow" href="http://www.adobe.com/solutions/digital-analytics.html">Adobe Tag Loader</a></li>
+            <li><a target="_blank" rel="nofollow" href="http://www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
             <li><a target="_blank" rel="nofollow" href="http://tongji.baidu.com/">Baidu Analytics</a></li>
             <li><a target="_blank" rel="nofollow" href="http://www.clicktale.com/">ClickTale</a></li>
             <li><a target="_blank" rel="nofollow" href="http://www.google.com/analytics/">Google Analytics</a></li>
