Updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -29,7 +29,6 @@
     <div class="dtm-grid-row dtm-header">
       <div class="dtm-grid-cell cell-span2 cell-offset2">
         <div class="dtm-cell-body dtm-logo">
-        
           <a href="../"
              class="dtm-ext-logo"
              title="Komito Collector"><svg version="1.1" id="dtmLogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -44,8 +43,9 @@
       <div class="dtm-grid-cell cell-span6">
         <nav>
           <ul class="dtm-nav">
-            <li class="dtm-nav-main-current"><a href='./' title='Komito Collector Overview'>Overview</a></li>
-            <li><a href='./integration/' title='Komito Collector Integration'>Integration</a></li>
+            <li><a href='../' title='Komito Collector Overview'>Overview</a></li>
+            <li class="dtm-nav-main-current"><a href='./integration/'
+                title='Komito Collector Integration'>Integration</a></li>
           </ul>
         </nav>
       </div>
