Updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -44,7 +44,7 @@
         <nav>
           <ul class="dtm-nav">
             <li><a href='../' title='Komito Collector Overview'>Overview</a></li>
-            <li class="dtm-nav-main-current"><a href='./integration/'
+            <li class="dtm-nav-main-current"><a href='../integration/'
                 title='Komito Collector Integration'>Integration</a></li>
           </ul>
         </nav>
