--- a/integration/index.html
+++ b/integration/index.html
@@ -31,12 +31,10 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="../"
              class="dtm-ext-logo"
-             title="Komito Collector"><svg version="1.1" id="dtmLogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-             x="0px" y="0px" width="48px" height="48px" viewBox="0 0 83 75"
-             enable-background="new 0 0 0 0" xml:space="preserve"><path fill-rule="evenodd"
-             class="ls s-12Hour" clip-rule="evenodd"
-             d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill-rule="evenodd" class="ls s-Trianle" clip-rule="evenodd" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill-rule="evenodd" class="ls s-5Hour" clip-rule="evenodd" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill-rule="evenodd" class="ls s-8Hour" clip-rule="evenodd" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333
-                  c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><b>Komito Collector</b><i>by Datamart</i></span></a>
+             style="padding:0"
+             title="Komito Collector"><img 
+             src="http://dtm.io/images/komito-logo-site.png"
+             alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
           <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span class="dtm-nav-lines"></span></label>
         </div>
       </div>
