Updated home page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="./"
              class="dtm-ext-logo"
+             style="padding:0"
              title="Komito Collector"><img 
              src="http://dtm.io/images/komito-logo-site.png"
              alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
