Updated home page

--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
   <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
   <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
   <link href="http://www.dtm.io/komito/assets/compiled.css" rel="stylesheet">
-
-<!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header{min-width: 1140px;}.dtm-header,.dtm-intro,.dtm-intro p span,.dtm-button,.dtm-footer,.dtm-page-scroller:hover{background-color: black;}
-.dtm-logo a{background: url('http://www.dtm.io/images/dtm-logo.png') no-repeat;}.dtm-page-company .dtm-intro p span,.dtm-section-form{background-color: white;}.dtm-section-quality{background-image: none;}.dtm-select:after,.dtm-select:before,.dtm-img-gallery:before,.dtm-img-gallery:after{display:none}input[type="text"],input[type="email"],.dtm-select select{line-height: 40px !important; padding-top: 4px;}.dtm-select select{height: auto; margin: 5px 0;padding-top: 4px;}.dtm-softdev input + label{display: none;}.dtm-dev-list > div{overflow: hidden;}.dtm-dev-list > div,.dtm-softdev .dtm-cell-body {height: auto;}.dtm-dev-list .dtm-sdev-img{margin-right: 0;text-align: center;} .dtm-page-home .dtm-content label {display:none !important;} .dtm-page-home .dtm-content { height: auto !important; overflow: visible !important;}.dtm-page-home .dtm-section.dtm-intro {background-image:none;padding-top: 110px !important; padding-bottom: 4%;}.dtm-softwaredev .cell-span4.cell-offset2 .dtm-cell-body{padding-top: 0;}.dtm-section.dtm-home-contacts{background-color: black;}
-</style><![endif]-->
-<!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}input[type="text"],input[type="email"],textarea{padding:6px 0;text-indent: 6px;}.dtm-select{height: auto; background: none; border: none;}
-.dtm-faces{background: url("http://www.dtm.io/images/dtm-faces.jpg") no-repeat 200% top white;}.dtm-faces .dtm-grid-cell,.dtm-intro-wrap div{background: none;display:block;float:left;}.dtm-section-content{width: auto;}.dtm-section-quality{position:static;}.dtm-contacts-list{bottom:auto;}.dtm-section.dtm-home-contacts p > a img,.dtm-section.dtm-home-contacts p > a span {float:left;}.dtm-section.dtm-section-quality ul {display: inline; zoom: 1;}.dtm-section.dtm-section-quality div {width:100%;}
-</style><![endif]-->  
+  <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
+  <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
 </head>
 <body class="dtm-page-komito dtm-product">
   <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
