Updated home page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   .dtm-header .dtm-nav li a:hover,
   .dtm-footer a:hover {color: #097ec7;}
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
+  .dtm-product h2 {color: #333;}
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
