--- a/integration/index.html
+++ b/integration/index.html
@@ -18,6 +18,15 @@
   <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
   <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
   <link href="http://www.dtm.io/komito/assets/compiled.css" rel="stylesheet">
+  <style>
+  a,
+  .dtm-header .dtm-nav li.dtm-nav-main-current a,
+  .dtm-footer nav li.dtm-nav-main-current a,
+  .dtm-header .dtm-nav li a:hover,
+  .dtm-footer a:hover {color: #097ec7;}
+  .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
+  .dtm-product h2 {color: #333;}
+  </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]--> 
 </head>
