--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   .dtm-footer a:hover {color: #097ec7;}
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
   .dtm-product h2 {color: #333;}
+  .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
