Updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -26,6 +26,8 @@
   .dtm-footer a:hover {color: #097ec7;}
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
   .dtm-product h2 {color: #333;}
+  .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
+  .dtm-ext-logo {padding: 0;}
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]--> 
@@ -38,7 +40,6 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="../"
              class="dtm-ext-logo"
-             style="padding:0"
              title="Komito Collector"><img 
              src="http://dtm.io/images/komito-logo-site.png"
              alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
