Updated home page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
   .dtm-product h2 {color: #333;}
   .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
+  .dtm-ext-logo {padding: 0;}
+  .dtm-product p {padding-top: 1em;}
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
@@ -39,7 +41,6 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="./"
              class="dtm-ext-logo"
-             style="padding:0"
              title="Komito Collector"><img 
              src="http://dtm.io/images/komito-logo-site.png"
              alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
@@ -118,7 +119,7 @@
   <div class="dtm-grid-row dtm-footer">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
       <div class="dtm-cell-body">
-        <p style="padding-top:1em">
+        <p>
           Komito Collector is subject to the terms and conditions
           of <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
         </p>
