Updated home page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
   .dtm-ext-logo {padding: 0;}
   .dtm-product p {padding-top: 1em;}
+  .dtm-footer .dtm-ext-logo b {font-weight: normal;}
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
