--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
   .dtm-product h2 {color: #333;}
   .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
-  .dtm-ext-logo {padding: 0;}
+  .dtm-logo a {padding: 0;}
   .dtm-product p {padding-top: 1em;}
   .dtm-footer .dtm-ext-logo b {font-weight: normal;}
   </style>
