Updated home page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
   .dtm-logo a {padding: 0;}
   .dtm-product p {padding-top: 1em;}
   .dtm-footer .dtm-ext-logo b {font-weight: normal;}
+  .dtm-button.clr-red:hover {background: #097ec7;}
+  .dtm-button.clr-red {border: 1px solid #2f90d3;}
+  .dtm-button.clr-red {
+    background: #097ec7;
+    background: -moz-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#dfeff9),color-stop(100%,#097ec7));
+    background: -webkit-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
+    background: -o-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
+    background: -ms-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
+    background: linear-gradient(to bottom,#dfeff9 0%,#097ec7 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfeff9',endColorstr='#097ec7',GradientType=0);
+  }
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
