--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   .dtm-header .dtm-nav li a:hover,
   .dtm-footer a:hover {color: #097ec7;}
   .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
-  .dtm-product h2 {color: #333;}
+  .dtm-product h2, .dtm-product h4 {color: #333;}
   .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
   .dtm-logo a {padding: 0;}
   .dtm-product p {padding-top: 1em;}
