Updated home page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     background: linear-gradient(to bottom,#dfeff9 0%,#097ec7 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfeff9',endColorstr='#097ec7',GradientType=0);
   }
+  body {
+    background-image: url(http://dtm.io/images/komito-logo-600x455.png);
+    background-size: cover;
+    opacity: 0.9;
+  }
   </style>
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->  
