Updated home page

--- a/index.html
+++ b/index.html
@@ -146,9 +146,10 @@
           </div>
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
-            <p>
+            <p style="text-align:right">
               Komito Collector is subject to the terms and conditions of
               <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
+              <br>© 2015 Datamart Inc.
             </p>
             </div>
           </div>
