--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p style="text-align:right">
               Komito Collector is subject to the terms and conditions of
               <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
-              <br>© 2015 <a href="http://dtm.io" title="Datamart Inc."></a>Datamart Inc.</a>
+              <br>© 2015 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
             </p>
             </div>
           </div>
