Updated home page

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <div class="dtm-grid-cell cell-span4">
             <div class="dtm-cell-body">
               <a href="http://dtm.io" title="Datamart Inc."
+                 style="margin-top:1.6em"
                  class="dtm-ext-logo"><svg version="1.1" id="dtmLogo"
                  xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -153,7 +154,7 @@
           </div>
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
-            <p style="text-align:right">
+            <p style="text-align:right;margin-top:.8em">
               Komito Collector is subject to the terms and conditions of
               <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
               <br>© 2015 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
