--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfeff9',endColorstr='#097ec7',GradientType=0);
   }
   body {
+    background-attachment: fixed;
     background-image: url(http://dtm.io/images/komito-logo-600x455.png);
     background-size: cover;
     opacity: 0.9;
