Updated home page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="dtm-grid-row dtm-section">
       <div class="dtm-grid-cell cell-span8 cell-offset2">
         <div class="dtm-cell-body">
-          <h1>Komito Collector at glance</h1>
+          <h1>Komito Collector at a glance</h1>
           <p class="txt-desc">
             The Komito Collector is a tool to unlock the power of digital analytics.
             It enriches analytics data with important information about visitor's behavior.
