Updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -81,7 +81,7 @@
   <div class="dtm-grid-row dtm-section">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
       <div class="dtm-cell-body">
-        <h1>Integration Komito Collector</h1>
+        <h1>Integration of Komito Collector</h1>
 
         <p>In order to install Komito Collector on your website simply add a line of code just before closing <code>&lt;/body&gt;</code> tag:</p>
         <code><pre>&lt;script type="text/javascript" src="//datamart.github.io/Komito/komito.js"&gt;&lt;/script&gt;</pre></code>
