Updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -100,6 +100,7 @@
     'trackActions': 1,   // Tracks 'mailto', 'tel', 'sms' and 'skype' actions.
     'trackPrint': 1,     // Tracks page print actions.
     'trackMedia': 1,     // Tracks HTML5 video, audio and YouTube player events.
+    'trackScroll': 1,    // Tracks scroll depth.
     'debugMode': 0       // Enables 'debug' mode.
   };
 &lt;/script&gt;</pre></code>
