--- a/integration/index.html
+++ b/integration/index.html
@@ -17,38 +17,7 @@
   <link rel="canonical" href="http://datamart.github.io/Komito/integration/">
   <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
   <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
-  <link href="http://www.dtm.io/komito/assets/compiled.css" rel="stylesheet">
-  <style>
-  a,
-  .dtm-header .dtm-nav li.dtm-nav-main-current a,
-  .dtm-footer nav li.dtm-nav-main-current a,
-  .dtm-header .dtm-nav li a:hover,
-  .dtm-footer a:hover {color: #097ec7;}
-  .dtm-header .dtm-nav li.dtm-nav-main-current {border-top: 2px solid #097ec7;}
-  .dtm-product h2, .dtm-product h4 {color: #333;}
-  .dtm-header,.dtm-footer,.dtm-footer .dtm-copyright div {background-color: #333;}
-  .dtm-logo a {padding: 0;}
-  .dtm-product p {padding-top: 1em;}
-  .dtm-footer .dtm-ext-logo b {font-weight: normal;}
-  .dtm-button.clr-red:hover {background: #097ec7;}
-  .dtm-button.clr-red {border: 1px solid #2f90d3;}
-  .dtm-button.clr-red {
-    background: #097ec7;
-    background: -moz-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
-    background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#dfeff9),color-stop(100%,#097ec7));
-    background: -webkit-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
-    background: -o-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
-    background: -ms-linear-gradient(top,#dfeff9 0%,#097ec7 100%);
-    background: linear-gradient(to bottom,#dfeff9 0%,#097ec7 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfeff9',endColorstr='#097ec7',GradientType=0);
-  }
-  body {
-    background-attachment: fixed;
-    background-image: url(http://dtm.io/images/komito-logo-600x455.png);
-    background-size: cover;
-    opacity: 0.9;
-  }
-  </style>
+  <link href="../stylesheets/styles.css" rel="stylesheet">
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
   <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]--> 
 </head>
