--- a/index.html
+++ b/index.html
@@ -143,4 +143,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
+<script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
