--- a/integration/index.html
+++ b/integration/index.html
@@ -53,7 +53,7 @@
         <h1>Integration of Komito Collector</h1>
 
         <p>In order to install Komito Collector on your website simply add a line of code just before closing <code>&lt;/body&gt;</code> tag:</p>
-        <code><pre>&lt;script type="text/javascript" src="//datamart.github.io/Komito/komito.js"&gt;&lt;/script&gt;</pre></code>
+        <code><pre>&lt;script src="//datamart.github.io/Komito/komito.js"&gt;&lt;/script&gt;</pre></code>
 
         <h3>Default Komito Collector configuration:</h3>
         <code><pre>
@@ -152,4 +152,5 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
+<script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
