--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="dtm-grid-row dtm-section">
       <div class="dtm-grid-cell cell-span4 cell-offset3">
         <div class="dtm-cell-body">
-          <h2>Features</h2>
+          <h2>Tracking for</h2>
           <ul>
             <li>Actions</li>
             <li>Downloads</li>
@@ -74,7 +74,7 @@
       </div>
       <div class="dtm-grid-cell cell-span3">
         <div class="dtm-cell-body">
-          <h2>Compatibility</h2>
+          <h2>Compatibile with</h2>
           <ul>
             <li><a target="_blank" rel="nofollow" href="http://www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
             <li><a target="_blank" rel="nofollow" href="http://tongji.baidu.com/">Baidu Analytics</a></li>
