--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="dtm-grid-cell cell-span3">
         <div class="dtm-cell-body">
-          <h2>Cross-Compatibile</h2>
+          <h2>Cross-Compatible</h2>
           <ul>
             <li><a target="_blank" rel="nofollow" href="http://www.adobe.com/marketing-cloud/web-analytics.html">Adobe Analytics</a></li>
             <li><a target="_blank" rel="nofollow" href="http://tongji.baidu.com/">Baidu Analytics</a></li>
