--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-  <title itemprop="name">Komito Collector</title>
-  <meta name="og:title" content="Komito Collector">
+  <title itemprop="name">Komito</title>
+  <meta name="og:title" content="Komito">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <meta name="description" content="The Komito collector is a tool to unlock the power of digital analytics.">
-  <meta name="og:description" content="The Komito collector is a tool to unlock the power of digital analytics.">
+  <meta name="description" content="The Komito is a tool to unlock the power of digital analytics.">
+  <meta name="og:description" content="The Komito is a tool to unlock the power of digital analytics.">
   <meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
   <meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
   <meta name="twitter:card" content="summary">
@@ -29,17 +29,17 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="./"
              class="dtm-ext-logo"
-             title="Komito Collector"><img 
+             title="Komito"><img 
              src="http://dtm.io/images/komito-logo-site.png"
-             alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
+             alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
           <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span class="dtm-nav-lines"></span></label>
         </div>
       </div>
       <div class="dtm-grid-cell cell-span6">
         <nav>
           <ul class="dtm-nav">
-            <li class="dtm-nav-main-current"><a href='./' title='Komito Collector Overview'>Overview</a></li>
-            <li><a href='./integration/' title='Komito Collector Integration'>Integration</a></li>
+            <li class="dtm-nav-main-current"><a href='./' title='Komito Overview'>Overview</a></li>
+            <li><a href='./integration/' title='Komito Integration'>Integration</a></li>
           </ul>
         </nav>
       </div>
@@ -50,9 +50,9 @@
     <div class="dtm-grid-row dtm-section">
       <div class="dtm-grid-cell cell-span8 cell-offset2">
         <div class="dtm-cell-body">
-          <h1>Komito Collector at a Glance</h1>
+          <h1>Komito at a Glance</h1>
           <p class="txt-desc">
-            The Komito Collector is a tool to unlock the power of digital analytics.
+            The Komito is a tool to unlock the power of digital analytics.
             It enriches analytics data with important information about visitor's behavior.
           </p>
         </div>
@@ -69,7 +69,8 @@
             <li>Form submissions</li>
             <li>Social widgets</li>
           </ul>
-          <a href="./integration/#features" class="kc-features" title="See Komito Collector features"><i>See all features</i>&nbsp;&rarr;</a>
+          <a href="./integration/#features" class="kc-features"
+             title="See all Komito features"><i>See all features</i>&nbsp;&rarr;</a>
         </div>
       </div>
       <div class="dtm-grid-cell cell-span3">
@@ -89,7 +90,9 @@
     <div class="dtm-grid-row dtm-section">
       <div class="dtm-grid-cell cell-span8 cell-offset2">
         <div class="dtm-cell-body">
-          <p class="txt-desc" style="text-align:center">* Caring about privacy and security, the Komito Collector <b>does not store</b> any data.</p>
+          <p class="txt-desc" style="text-align:center">
+            * Caring about privacy and security, the Komito <b>does not store</b> any data.
+          </p>
         </div>
       </div>
     </div>
@@ -97,8 +100,8 @@
     <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
       <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
            href="./integration/">integration</a> example&nbsp;&nbsp;-OR-&nbsp;&nbsp;&nbsp;<a
-           title="Download Komito Collector" class="dtm-button clr-red"
-           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Collector Now</span></a>
+           title="Download Komito" class="dtm-button clr-red"
+           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Now</span></a>
       </div>
     </div>
   </div>
@@ -125,7 +128,7 @@
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
             <p style="text-align:right;margin-top:.8em">
-              Komito Collector is subject to the terms and conditions of
+              Komito is subject to the terms and conditions of
               <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
               <br>© 2015 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
             </p>
