--- a/integration/index.html
+++ b/integration/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-  <title itemprop="name">Komito Collector - Integration</title>
-  <meta name="og:title" content="Komito Collector - Integration">
+  <title itemprop="name">Komito - Integration</title>
+  <meta name="og:title" content="Komito - Integration">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-  <meta name="description" content="The Komito collector is a tool to unlock the power of digital analytics.">
-  <meta name="og:description" content="The Komito collector is a tool to unlock the power of digital analytics.">
+  <meta name="description" content="The Komito is a tool to unlock the power of digital analytics.">
+  <meta name="og:description" content="The Komito is a tool to unlock the power of digital analytics.">
   <meta name="og:image" content="http://dtm.io/images/komito-logo-600x455.png">
   <meta itemprop="image" content="http://dtm.io/images/komito-logo-120x90.png">
   <meta name="twitter:card" content="summary">
@@ -29,18 +29,18 @@
         <div class="dtm-cell-body dtm-logo">
           <a href="../"
              class="dtm-ext-logo"
-             title="Komito Collector"><img 
+             title="Komito"><img 
              src="http://dtm.io/images/komito-logo-site.png"
-             alt="Komito Collector"><span><b>Komito Collector</b><i>by Datamart</i></span></a>
+             alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
           <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span class="dtm-nav-lines"></span></label>
         </div>
       </div>
       <div class="dtm-grid-cell cell-span6">
         <nav>
           <ul class="dtm-nav">
-            <li><a href='../' title='Komito Collector Overview'>Overview</a></li>
+            <li><a href='../' title='Komito Overview'>Overview</a></li>
             <li class="dtm-nav-main-current"><a href='../integration/'
-                title='Komito Collector Integration'>Integration</a></li>
+                title='Komito Integration'>Integration</a></li>
           </ul>
         </nav>
       </div>
@@ -50,12 +50,12 @@
   <div class="dtm-grid-row dtm-section">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
       <div class="dtm-cell-body">
-        <h1>Integration of Komito Collector</h1>
+        <h1>Integration of Komito</h1>
 
-        <p>In order to install Komito Collector on your website simply add a line of code just before closing <code>&lt;/body&gt;</code> tag:</p>
+        <p>In order to install Komito on your website simply add a line of code just before closing <code>&lt;/body&gt;</code> tag:</p>
         <code><pre>&lt;script src="<a href="//datamart.github.io/Komito/komito.js" target="_blank">//datamart.github.io/Komito/komito.js</a>"&gt;&lt;/script&gt;</pre></code>
 
-        <h3>Default Komito Collector configuration:</h3>
+        <h3>Default Komito configuration:</h3>
         <code><pre>
 &lt;script&gt;
   <b>var</b> _komito = _komito || {
@@ -74,7 +74,7 @@
   };
 &lt;/script&gt;</pre></code>
 
-        <h3 id="features">Komito Collector configuration parameters:</h3>
+        <h3 id="features">Komito configuration parameters:</h3>
           <h4>Social:</h4>
           <p>Tracks users' interaction with different on page widgets. Statistics available in custom reports or in social report.</p>
           <p class="kc-parameter"><code>trackTwitter</code> &mdash; Tries to attach listener to Twitter widget object if it presents on page. Tracking events: favorite, follow, retweet, tweet.</p>
@@ -107,9 +107,9 @@
   </div>
   <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
-      <a title="Download Komito Collector"
+      <a title="Download Komito"
          class="dtm-button clr-red"
-         href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Collector Now</span></a>
+         href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Now</span></a>
     </div>
   </div>
 </div>
@@ -134,7 +134,7 @@
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body dtm-copyright">
             <p style="text-align:right;margin-top:.8em">
-              Komito Collector is subject to the terms and conditions of
+              Komito is subject to the terms and conditions of
               <a href="http://www.apache.org/licenses/LICENSE-2.0" title="Apache License">Apache License 2.0</a>
               <br>© 2015 <a href="http://dtm.io" title="Datamart Inc.">Datamart Inc.</a>
             </p>
