--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="dtm-cell-body">
           <h2>Advanced Metrics</h2>
           <ul>
-            <li>Actions</li>
+            <li>Call to actions</li>
             <li>Downloads</li>
             <li>External links</li>
             <li>Form submissions</li>
