--- a/integration/index.html
+++ b/integration/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:url" content="http://datamart.github.io/Komito/integration/">
   <meta itemprop="url" content="http://datamart.github.io/Komito/integration/">
   <link rel="canonical" href="http://datamart.github.io/Komito/integration/">
-  <link href="http://www.dtm.io/shared/favicon.ico" rel="shortcut icon">
+  <link href="/Komito/favicon.ico" rel="shortcut icon">
   <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
   <link href="../stylesheets/styles.css" rel="stylesheet">
   <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
